...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AppActivity">

    <View
        android:id="@+id/view5"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:background="@drawable/round_button_card_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/aplicacao_view_chamados"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <View
        android:id="@+id/aplicacao_view_chamados"
        android:layout_width="125dp"
...
